<resources>
    <string name="app_name">SimpleApp</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>

    <!-- Navigation -->
    <string name="nav_author">Elixon</string>
    <string name="nav_author_desc">https://baoxiehao.github.com</string>

    <string name="nav_menu_info">INFO</string>
    <string name="nav_menu_pics">PICS</string>
    <string name="nav_menu_code">CODE</string>
    <string name="nav_menu_gank">GANK</string>
    <string name="nav_menu_share">Share</string>
    <string name="nav_menu_setting">Setting</string>

    <string name="fragment_title_zhihu">ZhiHu</string>
    <string name="fragment_title_tech">Tech</string>
    <string name="fragment_title_android">Android</string>
    <string name="fragment_title_blog">Blog</string>

    <string name="fragment_title_gank">Gank</string>
    <string name="fragment_title_fuli">Fuli</string>

    <string name="fragment_title_diycode_topics">Topic</string>
    <string name="fragment_title_diycode_projects">Project</string>
    <string name="fragment_title_diycode_news">News</string>
    <string name="fragment_title_diycode_github">Trending</string>
    <string name="fragment_title_diycode_sites">Site</string>

    <string name="rss_source_ifanr">IFANR</string>
    <string name="rss_source_geekpark">Geek Park</string>
    <string name="rss_source_qdaily">QDaily</string>

    <string name="mvp_empty_tip">Empty</string>
    <string name="mvp_error_tip">Error</string>

    <string name="web_refresh">Refresh</string>
    <string name="web_share">Share</string>
    <string name="web_copy_link">Copy Link</string>
    <string name="web_open_with">Open with</string>

    <string name="save_image">Save Image</string>

    <string name="dialog_title_share_app">Share this app</string>

    <string name="toast_page_refresh_failed">Failed to refresh.</string>
    <string name="toast_page_load_end">No more data to load.</string>
    <string name="toast_fuli_turned_on">Fuli will be turned on.</string>
    <string name="toast_fuli_turned_off">Fuli will be turned off.</string>
    <string name="toast_share_image_successful">Share successful.</string>
    <string name="toast_share_image_failed">Share failed.</string>
    <string name="toast_share_image_result" formatted="false">Shared %d of %d.</string>

    <!-- DO NOT TRANSLATE -->
    <string name="url_app_download">http://fir.im/simpleapp</string>
</resources>
